Fixed timepiece's interaction with multi-hit attacks. Timepiece now correctly destroys halfdead enemies. Thorton can no longer become "the Thorton?". Power of Chicken properly resets strength AFTER the attack goes through. Hopefully fixed endless run stuff.

--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,13 @@
             <scope>system</scope>
             <systemPath>${Steam.path}/workshop/content/646570/1854380319/TheShowman.jar</systemPath>
         </dependency>
+        <dependency>
+            <groupId>thorton</groupId>
+            <artifactId>thorton</artifactId>
+            <version>1.0.0</version>
+            <scope>system</scope>
+            <systemPath>${Steam.path}/workshop/content/646570/1783016812/thorton.jar</systemPath>
+        </dependency>
     </dependencies>
 
     <build>
